changing image size

--- a/storage/themes/riddelphotographers/partials/album-slider.html
+++ b/storage/themes/riddelphotographers/partials/album-slider.html
@@ -3,7 +3,7 @@
 		<koken:loop>
 			<div class="gallery-item">
 				<koken:link title="View {{ album.title }}" class="grid-overlay-link">
-					<koken:img />
+					<koken:img preset="medium" />
 					<div class="grid-overlay">
 						<h3 itemprop="headline">{{ album.title }}</h3>
 					</div>
