--- a/storage/themes/riddelphotographers/assets/scss/_gallery-styles.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_gallery-styles.scss
@@ -70,7 +70,7 @@
 			height: rem-calc(250);
 		}
 
-		@include breakpoint(medium only portrait) {
+		@include medium-portrait {
 			height: rem-calc(250);
 		}
 
