--- a/storage/themes/riddelphotographers/partials/page-header.html
+++ b/storage/themes/riddelphotographers/partials/page-header.html
@@ -3,13 +3,12 @@
   	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="shortcut icon" href="{{ location.theme_path }}/assets/images/favicon.ico" type="image/x-icon">
         <link rel="apple-touch-icon" sizes="180x180" href="{{ location.theme_path }}/assets/images/apple-touch-icon.png">
         <link rel="icon" type="image/png" href="{{ location.theme_path }}/assets/images/favicon-64x64.png" sizes="64x64">
         <link rel="icon" type="image/png" href="{{ location.theme_path }}/assets/images/favicon-32x32.png" sizes="32x32">
         <link rel="icon" type="image/png" href="{{ location.theme_path }}/assets/images/favicon-16x16.png" sizes="16x16">
         <link rel="manifest" href="{{ location.theme_path }}/assets/images/manifest.json">
-        <link rel="mask-icon" href="{{ location.theme_path }}/assets/images/safari-pinned-tab.svg" color="#5bbad5">
+        <link rel="mask-icon" href="{{ location.theme_path }}/assets/images/safari-pinned-tab.svg" color="#be8f3a">
         <meta name="theme-color" content="#ffffff">
 		<koken:meta />
 		<koken:title />
