--- a/storage/themes/riddelphotographers/partials/main-footer.html
+++ b/storage/themes/riddelphotographers/partials/main-footer.html
@@ -12,4 +12,4 @@
         </div>
     </div>
 </div>
-<koken:asset file="assets/js/min/app-min.js" />
+<koken:asset defer file="assets/js/min/app-min.js" />
