new theme update, includes language/label text, neater templates and flex box sticky footer

--- a/storage/themes/riddelphotographers/assets/scss/_main-styles.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_main-styles.scss
@@ -109,6 +109,12 @@ svg {
 
 .off-canvas-content {
 	background: inherit;
+	display: flex;
+	flex-direction: column;
+}
+
+.main-content {
+	flex: 2;
 }
 
 .disappear {
