--- a/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
@@ -219,9 +219,9 @@
 
 // login form
 
-.login {
-	overflow-x: hidden;
-}
+// .login {
+// 	overflow-x: hidden;
+// }
 
 .login-form {
 	margin: rem-calc(60 0);
