--- a/storage/themes/riddelphotographers/assets/scss/_footer.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_footer.scss
@@ -3,6 +3,7 @@
 .main-footer {
 	text-align: center;
 	padding: rem-calc(40 0);
+	background-color: rgba($white, 0.7);
 
 	a {
 		color: $secondary-color;
