--- a/storage/themes/riddelphotographers/partials/footer.html
+++ b/storage/themes/riddelphotographers/partials/footer.html
@@ -1,3 +1,30 @@
-    <koken:include file="partials/main-footer.html" />
+					<footer class="main-footer" itemscope itemtype="http://schema.org/WPFooter">
+						<p>&copy;&nbsp;{{ year }}&nbsp;{{ site.copyright }}</p>
+						<nav class="footer-nav">
+						    <koken:navigation group="footer" class="menu" />
+						</nav>
+						<div class="scroll-up-container">
+							<a class="scroll-up" href="#top" title="{{ language.back_to_top }}">
+								<svg class="icon icon-scroll-down"><use xlink:href="#icon-scroll-down"></use></svg>
+							</a>
+						</div>
+		            </footer>
+		        </div>
+		    </div>
+		</div>
+		<koken:asset defer file="assets/js/min/app-min.js" />
+		<script async defer src="//assets.pinterest.com/js/pinit.js"></script>
+        <script>
+
+            // background clip polyfill
+
+            var element = document.querySelector('.page-title');
+            element.backgroundClipPolyfill({
+                'patternID' : 'mypattern',
+                'patternURL' : '{{ location.theme_path }}/assets/images/inkbg.jpg',
+                'class' : 'page-title-svg'
+            });
+
+        </script>
 	</body>
 </html>
