--- a/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
@@ -92,27 +92,27 @@
 		vertical-align: bottom;
 		white-space: nowrap;
 
-		&:hover,
-		&:focus {
+		&::hover,
+		&::focus {
 			color: $primary-color;
 
-			&:before,
-			&:after {
+			&::before,
+			&::after {
 				transform: translateX(0);
 			}
 
-			&:before {
+			&::before {
 				transition-delay: 0s;
 			}
 
-			&:after {
+			&::after {
 				transition-delay: $transition-time;
 			}
 
 		}
 
-		&:before,
-		&:after {
+		&::before,
+		&::after {
 			position: absolute;
 			top: 0;
 			left: 0;
@@ -125,14 +125,14 @@
 			font-smoothing: antialiased;
 		}
 
-		&:before {
+		&::before {
 			border-top: 1px solid $anchor-color-hover;
 			background: transparent;
 			transition-delay: $transition-time;
 			transform: translateY( 95% );
 		}
 
-		&:after {
+		&::after {
 			z-index: -1;
 			background: rgba($anchor-color-hover, 0.9);
 			transform: translateY(-100%);
