--- a/storage/themes/riddelphotographers/assets/scss/_slick-theme.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_slick-theme.scss
@@ -84,8 +84,8 @@ $slick-opacity-not-active: 0.25 !default;
     background-position: center;
     background-size: rem-calc(60);
 
-    &:hover,
-    &:focus {
+    &::hover,
+    &::focus {
         outline: none;
         background-color: rgba($black, 0.5);
         color: transparent;
