--- a/storage/themes/riddelphotographers/assets/scss/_slick.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_slick.scss
@@ -22,7 +22,7 @@
     margin: 0;
     padding: 0;
 
-    &:focus {
+    &::focus {
         outline: none;
     }
 
@@ -39,13 +39,13 @@
     top: 0;
     display: block;
 
-    &:before,
-    &:after {
+    &::before,
+    &::after {
         content: '';
         display: table;
     }
 
-    &:after {
+    &::after {
         clear: both;
     }
 
