--- a/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
@@ -92,8 +92,8 @@
 		vertical-align: bottom;
 		white-space: nowrap;
 
-		&::hover,
-		&::focus {
+		&:hover,
+		&:focus {
 			color: $primary-color;
 
 			&::before,
