added accessibility labels and fixed up front page

--- a/storage/themes/riddelphotographers/assets/scss/_header.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_header.scss
@@ -1,7 +1,6 @@
 // main header
 
-.main-header,
-.page-header {
+.main-front-page-header {
 	position: relative;
 
 	.icon-scroll-down {
@@ -11,7 +10,6 @@
 
 }
 
-.main-header,
 .main-page-header {
 	flex: 1;
 
