--- a/storage/themes/riddelphotographers/partials/footer.html
+++ b/storage/themes/riddelphotographers/partials/footer.html
@@ -4,7 +4,7 @@
 						    <koken:navigation group="footer" class="menu" />
 						</nav>
 						<div class="scroll-up-container">
-							<a class="scroll-up" href="#top" title="{{ language.back_to_top }}">
+							<a class="scroll-up" href="#top" aria-label="{{ language.back_to_top }}" title="{{ language.back_to_top }}">
 								<svg class="icon icon-scroll-down"><use xlink:href="#icon-scroll-down"></use></svg>
 							</a>
 						</div>
