--- a/storage/themes/riddelphotographers/partials/header.html
+++ b/storage/themes/riddelphotographers/partials/header.html
@@ -13,8 +13,137 @@
         <meta name="theme-color" content="#ffffff">
 		<koken:meta />
 		<koken:title />
-		<koken:asset file="assets/css/app.css" />
+		<koken:asset rel="preload" file="assets/css/critical.css" media="all" as="style" onload="this.rel='stylesheet'" />
+		<noscript>
+			<koken:asset file="assets/css/critical.css" media="all" />
+		</noscript>
+		<koken:asset file="assets/css/app.css" media="all" />
 		<!-- <koken:settings /> -->
+		<script>
+			/*! loadCSS. [c]2017 Filament Group, Inc. MIT License */
+			(function (w){
+				'use strict';
+				/* exported loadCSS */
+				var loadCSS = function (href, before, media){
+					// Arguments explained:
+					// `href` [REQUIRED] is the URL for your CSS file.
+					// `before` [OPTIONAL] is the element the script should use as a reference for injecting our stylesheet <link> before
+						// By default, loadCSS attempts to inject the link after the last stylesheet or script in the DOM. However, you might desire a more specific location in your document.
+					// `media` [OPTIONAL] is the media type or query of the stylesheet. By default it will be 'all'
+					var doc = w.document;
+					var ss = doc.createElement('link');
+					var ref;
+					if (before){
+						ref = before;
+					}
+					else {
+						var refs = (doc.body || doc.getElementsByTagName('head')[0]).childNodes;
+						ref = refs[refs.length - 1];
+					}
+
+					var sheets = doc.styleSheets;
+					ss.rel = 'stylesheet';
+					ss.href = href;
+					// temporarily set media to something inapplicable to ensure it'll fetch without blocking render
+					ss.media = 'only x';
+
+					// wait until body is defined before injecting link. This ensures a non-blocking load in IE11.
+					function ready(cb){
+						if (doc.body){
+							return cb();
+						}
+						setTimeout(function (){
+							ready(cb);
+						});
+					}
+					// Inject link
+						// Note: the ternary preserves the existing behavior of "before" argument, but we could choose to change the argument to "after" in a later release and standardize on ref.nextSibling for all refs
+						// Note: `insertBefore` is used instead of `appendChild`, for safety re: http://www.paulirish.com/2011/surefire-dom-element-insertion/
+					ready(function (){
+						ref.parentNode.insertBefore(ss, (before ? ref : ref.nextSibling));
+					});
+					// A method (exposed on return object for external use) that mimics onload by polling document.styleSheets until it includes the new sheet.
+					var onloadcssdefined = function (cb){
+						var resolvedHref = ss.href;
+						var i = sheets.length;
+						while (i--){
+							if (sheets[i].href === resolvedHref){
+								return cb();
+							}
+						}
+						setTimeout(function () {
+							onloadcssdefined(cb);
+						});
+					};
+
+					function loadCB(){
+						if (ss.addEventListener){
+							ss.removeEventListener('load', loadCB);
+						}
+						ss.media = media || 'all';
+					}
+
+					// once loaded, set link's media back to `all` so that the stylesheet applies once it loads
+					if (ss.addEventListener){
+						ss.addEventListener('load', loadCB);
+					}
+					ss.onloadcssdefined = onloadcssdefined;
+					onloadcssdefined(loadCB);
+					return ss;
+				};
+				// commonjs
+				if (typeof exports !== 'undefined'){
+					exports.loadCSS = loadCSS;
+				}
+				else {
+					w.loadCSS = loadCSS;
+				}
+			}(typeof global !== 'undefined' ? global : this));
+			/*! loadCSS rel=preload polyfill. [c]2017 Filament Group, Inc. MIT License */
+			(function (w){
+				// rel=preload support test
+				if (!w.loadCSS){
+					return;
+				}
+				var rp = loadCSS.relpreload = {};
+				rp.support = function (){
+					try {
+						return w.document.createElement('link').relList.supports('preload');
+					} catch (e) {
+						return false;
+					}
+				};
+
+				// loop preload links and fetch using loadCSS
+				rp.poly = function (){
+					var links = w.document.getElementsByTagName('link');
+					for (var i = 0; i < links.length; i++){
+					var link = links[i];
+					if (link.rel === 'preload' && link.getAttribute('as') === 'style'){
+						w.loadCSS(link.href, link, link.getAttribute('media'));
+							link.rel = null;
+						}
+					}
+				};
+
+				// if link[rel=preload] is not supported, we must fetch the CSS manually using loadCSS
+				if (!rp.support()){
+					rp.poly();
+					var run = w.setInterval(rp.poly, 300);
+					if (w.addEventListener){
+						w.addEventListener('load', function (){
+							rp.poly();
+							w.clearInterval(run);
+						});
+					}
+					if (w.attachEvent){
+						w.attachEvent('onload', function (){
+							w.clearInterval(run);
+						})
+					}
+				}
+			}(this));
+		</script>
 	</head>
 	<body itemscope itemtype="http://schema.org/WebPage">
 		<koken:include file="partials/svg.html" />
@@ -25,27 +154,27 @@
 				<koken:include file="partials/side-navigation.html" />
 				<div class="off-canvas-content vh_min-height100" data-off-canvas-content>
 					<koken:if data="location.here" equals="/">
-					    <header class="main-front-page-header vh_height100" itemscope itemtype="http://schema.org/WPHeader">
-	                        <div class="main-elements">
-	                            <koken:link to="front" aria-label="{{ labels.home.singular }}" title="{{ labels.home.singular }}" class="">
-	                                <h1 itemprop="headline">
-	                                    <span class="visual-hide">{{ site.title }}</span>
-	                                    <koken:asset file="assets/images/logo.png" class="main-logo" alt="{{ site.title }}" width="1434" height="676" />
-	                                </h1>
-	                            </koken:link>
-	                            <koken:include file="partials/navigation.html" />
-	                            <div class="scroll-down-container">
-	                                <a class="scroll-down" href="#content" aria-label="Scroll Down" title="Scroll Down">
-	                                    <svg class="icon icon-scroll-down"><use xlink:href="#icon-scroll-down"></use></svg>
-	                                </a>
-	                            </div>
-	                        </div>
-	                        <a class="hamburger" aria-label="{{ language.open_mobile_menu }}" title="{{ language.open_mobile_menu }}" data-toggle="offCanvasRight">
-	                            <span class="bar" aria-hidden="true"></span>
-	                        </a>
-	                    </header>
+						<header class="main-front-page-header vh_height100" itemscope itemtype="http://schema.org/WPHeader">
+							<div class="main-elements">
+								<koken:link to="front" aria-label="{{ labels.home.singular }}" title="{{ labels.home.singular }}" class="">
+									<h1 itemprop="headline">
+										<span class="visual-hide">{{ site.title }}</span>
+										<koken:asset file="assets/images/logo.png" class="main-logo" alt="{{ site.title }}" width="1434" height="676" />
+									</h1>
+								</koken:link>
+								<koken:include file="partials/navigation.html" />
+								<div class="scroll-down-container">
+									<a class="scroll-down" href="#content" aria-label="Scroll Down" title="Scroll Down">
+										<svg class="icon icon-scroll-down"><use xlink:href="#icon-scroll-down"></use></svg>
+									</a>
+								</div>
+							</div>
+							<a class="hamburger" aria-label="{{ language.open_mobile_menu }}" title="{{ language.open_mobile_menu }}" data-toggle="offCanvasRight">
+								<span class="bar" aria-hidden="true"></span>
+							</a>
+						</header>
 					<koken:else>
-					    <header class="main-page-header" itemscope itemtype="http://schema.org/WPHeader">
+						<header class="main-page-header" itemscope itemtype="http://schema.org/WPHeader">
 							<div class="top-navigation">
 								<div class="top-navigation-left">
 									<koken:link to="front" title="{{ labels.home.singular }}" class="logo-link">
