--- a/storage/themes/riddelphotographers/partials/header.html
+++ b/storage/themes/riddelphotographers/partials/header.html
@@ -4,20 +4,22 @@
   		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="apple-touch-icon" sizes="180x180" href="{{ location.theme_path }}/assets/images/apple-touch-icon.png">
-        <link rel="icon" type="image/png" href="{{ location.theme_path }}/assets/images/favicon-64x64.png" sizes="64x64">
-        <link rel="icon" type="image/png" href="{{ location.theme_path }}/assets/images/favicon-32x32.png" sizes="32x32">
-        <link rel="icon" type="image/png" href="{{ location.theme_path }}/assets/images/favicon-16x16.png" sizes="16x16">
-        <link rel="manifest" href="{{ location.theme_path }}/assets/images/manifest.json">
-        <link rel="mask-icon" href="{{ location.theme_path }}/assets/images/safari-pinned-tab.svg" color="#be8f3a">
-        <meta name="theme-color" content="#ffffff">
+		<link rel="apple-touch-icon" sizes="180x180" href="{{ location.theme_path }}/assets/images/apple-touch-icon.png">
+		<link rel="icon" type="image/png" href="{{ location.theme_path }}/assets/images/favicon-64x64.png" sizes="64x64">
+		<link rel="icon" type="image/png" href="{{ location.theme_path }}/assets/images/favicon-32x32.png" sizes="32x32">
+		<link rel="icon" type="image/png" href="{{ location.theme_path }}/assets/images/favicon-16x16.png" sizes="16x16">
+		<link rel="manifest" href="{{ location.theme_path }}/assets/images/manifest.json">
+		<link rel="mask-icon" href="{{ location.theme_path }}/assets/images/safari-pinned-tab.svg" color="#be8f3a">
+		<meta name="theme-color" content="#ffffff">
 		<koken:meta />
 		<koken:title />
-		<koken:asset rel="preload" file="assets/css/critical.css" media="all" as="style" onload="this.rel='stylesheet'" />
+		<style type="text/css">
+			<koken:include file="assets/css/critical.css" />
+		</style>
+		<koken:asset rel="preload" file="assets/css/app.css" media="all" as="style" onload="this.rel='stylesheet'" />
 		<noscript>
-			<koken:asset file="assets/css/critical.css" media="all" />
+			<koken:asset file="assets/css/app.css" media="all" />
 		</noscript>
-		<koken:asset file="assets/css/app.css" media="all" />
 		<!-- <koken:settings /> -->
 		<script>
 			/*! loadCSS. [c]2017 Filament Group, Inc. MIT License */
