still testing critical css

--- a/storage/themes/riddelphotographers/partials/header.html
+++ b/storage/themes/riddelphotographers/partials/header.html
@@ -13,11 +13,7 @@
 		<meta name="theme-color" content="#ffffff">
 		<koken:meta />
 		<koken:title />
-		<koken:asset rel="preload" file="assets/css/critical.css" media="all" as="style" onload="this.rel='stylesheet'" />
-		<noscript>
-			<koken:asset file="assets/css/critical.css" media="all" />
-		</noscript>
-		<koken:asset file="assets/css/app.css" media="all" />
+		<koken:asset file="assets/css/test.css" media="all" />
 		<!-- <koken:settings /> -->
 		<script>
 			/*! loadCSS. [c]2017 Filament Group, Inc. MIT License */
