--- a/storage/themes/riddelphotographers/assets/scss/critical.scss
+++ b/storage/themes/riddelphotographers/assets/scss/critical.scss
@@ -10,8 +10,8 @@
 
 @include foundation-global-styles;
 // @include foundation-grid;
-@include foundation-flex-grid;
-@include foundation-typography;
+// @include foundation-flex-grid;
+// @include foundation-typography;
 // @include foundation-button;
 // @include foundation-forms;
 // @include foundation-accordion;
@@ -29,7 +29,7 @@
 // @include foundation-flex-video;
 // @include foundation-label;
 // @include foundation-media-object;
-// @include foundation-off-canvas;
+@include foundation-off-canvas;
 // @include foundation-orbit;
 // @include foundation-pagination;
 // @include foundation-progress-bar;
@@ -47,20 +47,20 @@
 // @include foundation-top-bar;
 @include foundation-visibility-classes;
 // @include foundation-float-classes;
-@include foundation-flex-classes;
+// @include foundation-flex-classes;
 
 // @include motion-ui-transitions;
 // @include motion-ui-animations;
 
 // @import 'animations';
 // @import 'slick';
-@import 'slick-theme';
+// @import 'slick-theme';
 @import 'animsition';
-// @import 'main-styles';
+@import 'main-styles';
 // @import 'forms';
 @import 'off-canvas-menu';
 @import 'header';
 // @import 'home-page';
-@import 'gallery-styles';
-@import 'page-styles';
+// @import 'gallery-styles';
+// @import 'page-styles';
 // @import 'footer';
