--- a/storage/themes/riddelphotographers/partials/header.html
+++ b/storage/themes/riddelphotographers/partials/header.html
@@ -13,7 +13,13 @@
 		<meta name="theme-color" content="#ffffff">
 		<koken:meta />
 		<koken:title />
-		<koken:asset file="assets/css/test.css" media="all" />
+		<style type="text/css">
+			<koken:include file="assets/css/critical.css" />
+		</style>
+		<koken:asset rel="preload" file="assets/css/app.css" media="all" as="style" onload="this.rel='stylesheet'" />
+		<noscript>
+			<koken:asset file="assets/css/app.css" media="all" />
+		</noscript>
 		<!-- <koken:settings /> -->
 		<script>
 			/*! loadCSS. [c]2017 Filament Group, Inc. MIT License */
