--- a/storage/themes/riddelphotographers/partials/footer.html
+++ b/storage/themes/riddelphotographers/partials/footer.html
@@ -12,6 +12,17 @@
 		        </div>
 		    </div>
 		</div>
+		<script>
+			var cb = function () {
+				var l = document.createElement('link'); l.rel = 'stylesheet';
+				l.href = '{{ location.theme_path }}/assets/css/app.css';
+				var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
+			};
+			var raf = requestAnimationFrame || mozRequestAnimationFrame ||
+				webkitRequestAnimationFrame || msRequestAnimationFrame;
+			if (raf) raf(cb);
+			else window.addEventListener('load', cb);
+		</script>
 		<koken:asset defer file="assets/js/min/app-min.js" />
 		<script async defer src="//assets.pinterest.com/js/pinit.js"></script>
 		<script>
