--- a/storage/themes/riddelphotographers/partials/footer.html
+++ b/storage/themes/riddelphotographers/partials/footer.html
@@ -12,7 +12,12 @@
 		        </div>
 		    </div>
 		</div>
+		<koken:asset defer file="assets/js/min/app-min.js" />
+		<script async defer src="//assets.pinterest.com/js/pinit.js"></script>
 		<script>
+
+			// generate css after the broswer is finished browsing
+
 			var cb = function () {
 				var l = document.createElement('link'); l.rel = 'stylesheet';
 				l.href = '{{ location.theme_path }}/assets/css/app.css';
@@ -22,10 +27,6 @@
 				webkitRequestAnimationFrame || msRequestAnimationFrame;
 			if (raf) raf(cb);
 			else window.addEventListener('load', cb);
-		</script>
-		<koken:asset defer file="assets/js/min/app-min.js" />
-		<script async defer src="//assets.pinterest.com/js/pinit.js"></script>
-		<script>
 
 			// background clip polyfill
 
