fixed up footer links

--- a/storage/themes/riddelphotographers/partials/footer.html
+++ b/storage/themes/riddelphotographers/partials/footer.html
@@ -1,7 +1,7 @@
 					<footer class="main-footer" itemscope itemtype="http://schema.org/WPFooter">
 						<p>&copy;&nbsp;{{ year }}&nbsp;{{ site.copyright }}</p>
 						<nav class="footer-nav">
-						    <koken:navigation group="footer" class="menu" />
+						    <koken:navigation group="footer" class="align-center menu" />
 						</nav>
 						<div class="scroll-up-container">
 							<a class="scroll-up" href="#top" aria-label="{{ language.back_to_top }}" title="{{ language.back_to_top }}">
