--- a/storage/themes/riddelphotographers/assets/scss/_main-styles.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_main-styles.scss
@@ -54,6 +54,12 @@ figure {
 	margin: 0;
 }
 
+fieldset {
+	margin: 0;
+	padding: 0;
+	border: 0;
+}
+
 .responsive-svg-container {
 	width: 100%;
 	height: auto;
