fixed koken generated background images

--- a/storage/themes/riddelphotographers/assets/scss/_home-page.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_home-page.scss
@@ -20,6 +20,22 @@
 		background-attachment: scroll;
 	}
 
+	#Weddings & {
+	background-color: rgb(168, 171, 173);
+	}
+
+	#Engagements & {
+		background-color: rgb(69, 62, 42);
+	}
+
+	#Families & {
+		background-color: rgb(188, 166, 151);
+	}
+
+	#Personal & {
+		background-color: rgb(88, 166, 51);
+	}
+
 }
 
 .main-title,
