--- a/storage/themes/riddelphotographers/partials/header.html
+++ b/storage/themes/riddelphotographers/partials/header.html
@@ -4,6 +4,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<koken:title />
 		<link rel="apple-touch-icon" sizes="180x180" href="{{ location.theme_path }}/assets/images/apple-touch-icon.png">
 		<link rel="icon" type="image/png" href="{{ location.theme_path }}/assets/images/favicon-64x64.png" sizes="64x64">
 		<link rel="icon" type="image/png" href="{{ location.theme_path }}/assets/images/favicon-32x32.png" sizes="32x32">
@@ -11,11 +12,26 @@
 		<link rel="manifest" href="{{ location.theme_path }}/assets/images/manifest.json">
 		<link rel="mask-icon" href="{{ location.theme_path }}/assets/images/safari-pinned-tab.svg" color="#be8f3a">
 		<meta name="theme-color" content="#ffffff">
-		<koken:meta />
-		<koken:title />
 		<style type="text/css">
 			<koken:include file="assets/css/critical.css" />
 		</style>
+		<script>
+
+			// generate css after the broswer is finished browsing
+
+			var cb = function () {
+				var l = document.createElement('link'); l.rel = 'stylesheet';
+				l.href = '{{ location.theme_path }}/assets/css/app.css';
+				var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
+			};
+			var raf = requestAnimationFrame || mozRequestAnimationFrame ||
+				webkitRequestAnimationFrame || msRequestAnimationFrame;
+			if (raf) raf(cb);
+			else window.addEventListener('load', cb);
+
+		</script>
+		<koken:meta />
+		<!-- <koken:asset file="assets/css/app.css" /> -->
 		<!-- <koken:settings /> -->
 	</head>
 	<body itemscope itemtype="http://schema.org/WebPage">
