--- a/storage/themes/riddelphotographers/partials/header.html
+++ b/storage/themes/riddelphotographers/partials/header.html
@@ -12,26 +12,11 @@
 		<link rel="manifest" href="{{ location.theme_path }}/assets/images/manifest.json">
 		<link rel="mask-icon" href="{{ location.theme_path }}/assets/images/safari-pinned-tab.svg" color="#be8f3a">
 		<meta name="theme-color" content="#ffffff">
+		<koken:meta />
 		<style type="text/css">
 			<koken:include file="assets/css/critical.css" />
 		</style>
-		<script>
-
-			// generate css after the broswer is finished browsing
-
-			var cb = function () {
-				var l = document.createElement('link'); l.rel = 'stylesheet';
-				l.href = '{{ location.theme_path }}/assets/css/app.css';
-				var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
-			};
-			var raf = requestAnimationFrame || mozRequestAnimationFrame ||
-				webkitRequestAnimationFrame || msRequestAnimationFrame;
-			if (raf) raf(cb);
-			else window.addEventListener('load', cb);
-
-		</script>
-		<koken:meta />
-		<!-- <koken:asset file="assets/css/app.css" /> -->
+		<koken:asset rel="preload" file="assets/css/app.css" />
 		<!-- <koken:settings /> -->
 	</head>
 	<body itemscope itemtype="http://schema.org/WebPage">
