updated bower components

--- a/storage/themes/riddelphotographers/partials/header.html
+++ b/storage/themes/riddelphotographers/partials/header.html
@@ -16,7 +16,7 @@
 		<style type="text/css">
 			<koken:include file="assets/css/critical.css" />
 		</style>
-		<koken:asset rel="preload" file="assets/css/app.css" />
+		<koken:asset rel="preload" file="assets/css/app.css" media="all" />
 		<!-- <koken:settings /> -->
 	</head>
 	<body itemscope itemtype="http://schema.org/WebPage">
