--- a/storage/themes/riddelphotographers/partials/header.html
+++ b/storage/themes/riddelphotographers/partials/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html itemscope itemtype="http://schema.org/WebPage">
 	<head>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta charset="utf-8">
@@ -12,14 +12,17 @@
 		<link rel="manifest" href="{{ location.theme_path }}/assets/images/manifest.json">
 		<link rel="mask-icon" href="{{ location.theme_path }}/assets/images/safari-pinned-tab.svg" color="#be8f3a">
 		<meta name="theme-color" content="#ffffff">
+		<meta name="robots" content="follow, index">
+		<meta name="rating" content="general">
+		<meta name="HandheldFriendly" content="true">
 		<koken:meta />
 		<style type="text/css">
 			<koken:include file="assets/css/critical.css" />
 		</style>
-		<koken:asset rel="preload" file="assets/css/app.css" media="all" />
+		<koken:asset file="assets/css/app.css" media="all" />
 		<!-- <koken:settings /> -->
 	</head>
-	<body itemscope itemtype="http://schema.org/WebPage">
+	<body>
 		<koken:include file="partials/svg.html" />
 		<!--[if lte IE 9]><p class="old-browser-notice">Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> to experience this site.</p><![endif]-->
 		<noscript><h1>To access all of the features of this website, please enable JavaScript in your browser. Thank you.</h1></noscript>
