--- a/storage/themes/riddelphotographers/partials/header.html
+++ b/storage/themes/riddelphotographers/partials/header.html
@@ -37,6 +37,7 @@
 									<h1 itemprop="headline">
 										<span class="visual-hide">{{ site.title }}</span>
 										<koken:asset file="assets/images/logo.png" class="main-logo" alt="{{ site.title }}" width="1434" height="676" />
+										<koken:asset file="assets/css/app.css" media="all" />
 									</h1>
 								</koken:link>
 								<koken:include file="partials/navigation.html" />
