--- a/storage/themes/riddelphotographers/partials/header.html
+++ b/storage/themes/riddelphotographers/partials/header.html
@@ -13,8 +13,8 @@
 		<link rel="mask-icon" href="{{ location.theme_path }}/assets/images/safari-pinned-tab.svg" color="#be8f3a">
 		<meta name="theme-color" content="#ffffff">
 		<meta name="robots" content="follow, index">
-		<meta name="rating" content="general">
 		<meta name="HandheldFriendly" content="true">
+		<link type="text/plain" rel="author" href="{{ location.root_folder }}humans.txt">
 		<koken:meta />
 		<style type="text/css">
 			<koken:include file="assets/css/critical.css" />
