removed vunit polyfill

--- a/storage/themes/riddelphotographers/partials/header.html
+++ b/storage/themes/riddelphotographers/partials/header.html
@@ -29,9 +29,9 @@
 		<div id="top" class="off-canvas-wrapper animsition">
 			<div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
 				<koken:include file="partials/side-navigation.html" />
-				<div class="off-canvas-content vh_min-height100" data-off-canvas-content>
+				<div class="off-canvas-content" data-off-canvas-content>
 					<koken:if data="location.here" equals="/">
-						<header class="main-front-page-header vh_height100" itemscope itemtype="http://schema.org/WPHeader">
+						<header class="main-front-page-header" itemscope itemtype="http://schema.org/WPHeader">
 							<div class="main-elements">
 								<koken:link to="front" aria-label="{{ labels.home.singular }}" title="{{ labels.home.singular }}" class="">
 									<h1 itemprop="headline">
