removing flex properties that cause problems on ie11

--- a/storage/themes/riddelphotographers/assets/scss/_main-styles.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_main-styles.scss
@@ -124,8 +124,8 @@ fieldset {
 
 .off-canvas-content {
 	background: inherit;
-	display: flex;
-	flex-direction: column;
+	// display: flex;
+	// flex-direction: column;
 }
 
 // styling for Pace, an automatic web page progress bar.
@@ -149,13 +149,13 @@ fieldset {
 	height: rem-calc(3);
 }
 
-.main-front-page-content {
-	flex: 1;
-}
+// .main-front-page-content {
+// 	flex: 1;
+// }
 
-.main-content {
-	flex: 2;
-}
+// .main-content {
+// 	flex: 2;
+// }
 
 .disappear {
 	display: none;
