--- a/storage/themes/riddelphotographers/partials/footer.html
+++ b/storage/themes/riddelphotographers/partials/footer.html
@@ -12,7 +12,7 @@
 				</div>
 			</div>
 		</div>
-		<koken:asset file="assets/js/min/app-min.js" />
+		<script async defer src="{{ location.theme_path }}/assets/js/min/app-min.js"></script>
 		<script async defer src="//assets.pinterest.com/js/pinit.js"></script>
 		<script>
 
