saved pinit.js locally to be updated via cron

--- a/storage/themes/riddelphotographers/partials/footer.html
+++ b/storage/themes/riddelphotographers/partials/footer.html
@@ -13,7 +13,7 @@
 			</div>
 		</div>
 		<script async defer src="{{ location.theme_path }}/assets/js/min/app-min.js"></script>
-		<script async defer src="//assets.pinterest.com/js/pinit.js"></script>
+		<script async defer src="{{ location.theme_path }}/assets/js/pinit.js"></script>
 		<script>
 
 			// background clip polyfill
