--- a/storage/themes/riddelphotographers/partials/footer.html
+++ b/storage/themes/riddelphotographers/partials/footer.html
@@ -12,7 +12,7 @@
 				</div>
 			</div>
 		</div>
-		<script async defer src="{{ location.theme_path }}/assets/js/min/app-min.js"></script>
+		<script defer src="{{ location.theme_path }}/assets/js/min/app-min.js"></script>
 		<script async defer src="{{ location.theme_path }}/assets/js/pinit.js"></script>
 		<script>
 
