--- a/storage/themes/riddelphotographers/partials/header.html
+++ b/storage/themes/riddelphotographers/partials/header.html
@@ -19,18 +19,22 @@
 		<style type="text/css">
 			<koken:include file="assets/css/critical.css" />
 		</style>
-		<script type="text/javascript">
-			$(document).ready(function(){
+		<script>
 
+			// inlining main CSS
+
+			window.onload = function (){
+				var css = '{{ location.theme_path }}/assets/css/app.css';
 				if ($('body').size()>0){
-		    		if (document.createStyleSheet){
-						document.createStyleSheet('{{ location.theme_path }}/assets/css/app.css');
+					if (document.createStyleSheet){
+						document.createStyleSheet(css);
 					}
 					else {
-						$('head').append($('<link rel="stylesheet" href="{{ location.theme_path }}/assets/css/app.css" type="text/css" media="all" />'));
+						$('head').append($('<link rel="stylesheet" href="' + css + '" type="text/css" media="all" />'));
 					}
 				}
-			});
+			};
+
 		</script>
 	</head>
 	<body>
