--- a/storage/themes/riddelphotographers/assets/scss/_animsition.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_animsition.scss
@@ -5,7 +5,12 @@
  * License : MIT
  * Author : blivesta (http://blivesta.com/)
  */
-.animsition,
+.k-lens-set .off-canvas-wrapper,
+.k-lens-page .off-canvas-wrapper,
+.k-lens-index .off-canvas-wrapper,
+.k-lens-albums .off-canvas-wrapper,
+.k-lens-sets .off-canvas-wrapper,
+.k-lens-login .off-canvas-wrapper,
 .animsition-overlay {
   position: relative;
   opacity: 0;
