--- a/storage/themes/riddelphotographers/partials/header.html
+++ b/storage/themes/riddelphotographers/partials/header.html
@@ -41,7 +41,7 @@
 		<koken:include file="partials/svg.html" />
 		<!--[if lte IE 9]><p class="old-browser-notice">Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> to experience this site.</p><![endif]-->
 		<noscript><h1>To access all of the features of this website, please enable JavaScript in your browser. Thank you.</h1></noscript>
-		<div id="top" class="off-canvas-wrapper animsition">
+		<div id="top" class="off-canvas-wrapper">
 			<div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
 				<koken:include file="partials/side-navigation.html" />
 				<div class="off-canvas-content" data-off-canvas-content>
