moved effect settings to own selector

--- a/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
@@ -67,10 +67,7 @@
 
 }
 
-.content,
-.contents {
-	padding-top: rem-calc(48);
-	padding-bottom: rem-calc(48);
+.content {
 
 	p {
 		opacity: 0;
@@ -84,6 +81,13 @@
 		}
 
 	}
+
+}
+
+.content,
+.contents {
+	padding-top: rem-calc(48);
+	padding-bottom: rem-calc(48);
 
 	a {
 		overflow: hidden;
