--- a/src/assets/scss/_gallery-styles.scss
+++ b/src/assets/scss/_gallery-styles.scss
@@ -144,9 +144,9 @@
 
 }
 
-img.k-lazy-loading {
-	@include spinner;
-}
+// img.k-lazy-loading {
+// 	@include spinner;
+// }
 
 .k-password-protected {
 
