--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -30,12 +30,12 @@
 	height: 100%;
 }
 
-@mixin spinner {
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: rem-calc(80);
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='32' height='32' viewBox='0 0 32 32' fill='#{$secondary-color-rgb}'%3E%3Ccircle transform='translate(8 0)' cx='0' cy='16' r='0'%3E %3Canimate attributeName='r' values='0; 4; 0; 0' dur='1.2s' repeatCount='indefinite' begin='0' keytimes='0;0.2;0.7;1' keySplines='0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8' calcMode='spline' /%3E %3C/circle%3E %3Ccircle transform='translate(16 0)' cx='0' cy='16' r='0'%3E %3Canimate attributeName='r' values='0; 4; 0; 0' dur='1.2s' repeatCount='indefinite' begin='0.3' keytimes='0;0.2;0.7;1' keySplines='0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8' calcMode='spline' /%3E %3C/circle%3E %3Ccircle transform='translate(24 0)' cx='0' cy='16' r='0'%3E %3Canimate attributeName='r' values='0; 4; 0; 0' dur='1.2s' repeatCount='indefinite' begin='0.6' keytimes='0;0.2;0.7;1' keySplines='0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8' calcMode='spline' /%3E %3C/circle%3E%3C/svg%3E");
-}
+// @mixin spinner {
+//     background-repeat: no-repeat;
+//     background-position: center center;
+//     background-size: rem-calc(80);
+//     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='32' height='32' viewBox='0 0 32 32' fill='#{$secondary-color-rgb}'%3E%3Ccircle transform='translate(8 0)' cx='0' cy='16' r='0'%3E %3Canimate attributeName='r' values='0; 4; 0; 0' dur='1.2s' repeatCount='indefinite' begin='0' keytimes='0;0.2;0.7;1' keySplines='0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8' calcMode='spline' /%3E %3C/circle%3E %3Ccircle transform='translate(16 0)' cx='0' cy='16' r='0'%3E %3Canimate attributeName='r' values='0; 4; 0; 0' dur='1.2s' repeatCount='indefinite' begin='0.3' keytimes='0;0.2;0.7;1' keySplines='0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8' calcMode='spline' /%3E %3C/circle%3E %3Ccircle transform='translate(24 0)' cx='0' cy='16' r='0'%3E %3Canimate attributeName='r' values='0; 4; 0; 0' dur='1.2s' repeatCount='indefinite' begin='0.6' keytimes='0;0.2;0.7;1' keySplines='0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8' calcMode='spline' /%3E %3C/circle%3E%3C/svg%3E");
+// }
 
 @mixin small-portrait {
 
