--- a/src/assets/scss/_slick-theme.scss
+++ b/src/assets/scss/_slick-theme.scss
@@ -41,13 +41,13 @@ $slick-opacity-not-active: 0.25 !default;
 
 /* Slider */
 
-.slick-list {
+// .slick-list {
 
-    .slick-loading & {
-        @include spinner;
-    }
+//     .slick-loading & {
+//         @include spinner;
+//     }
 
-}
+// }
 
 /* Icons */
 // @if $slick-font-family == "slick" {
