remove id from navigation

--- a/craft/templates/partials/navigation.twig
+++ b/craft/templates/partials/navigation.twig
@@ -1,5 +1,6 @@
 <nav class="main-nav" itemscope itemtype="http://schema.org/SiteNavigationElement">
-	{{ craft.amNav.getNav("main", {
-	    class: 'menu'
+	{{ craft.amNav.getNav('main', {
+		class: 'menu',
+		id: ''
 	}) }}
 </nav>
