added missing closing 'head' tag

--- a/craft/templates/layouts/_error.twig
+++ b/craft/templates/layouts/_error.twig
@@ -12,6 +12,7 @@
 					{% include 'assets/css/critical.css' %}
 				</style>
 	{% minify %}
+			</head>
 			<body class="error-page">
 				{% include 'partials/svg.twig' %}
 				<div id="top" class="off-canvas-wrapper page-load">
