removing 'async' and 'defer'

--- a/craft/templates/layouts/_default.twig
+++ b/craft/templates/layouts/_default.twig
@@ -43,7 +43,7 @@
 				</script>
 
 				{# Main site JS #}
-				<script src="{{ siteRoot }}dist/assets/js/app.js" async defer></script>
+				<script src="{{ siteRoot }}dist/assets/js/app.js"></script>
 
 				{# Google Analytics #}
 				{% if metatags.googleAnalyticsCode is defined %}
