align menu items to centre only on homepage

--- a/craft/templates/partials/navigation.twig
+++ b/craft/templates/partials/navigation.twig
@@ -1,6 +1,13 @@
 <nav class="main-nav" itemscope itemtype="http://schema.org/SiteNavigationElement">
-	{{ craft.amNav.getNav('main', {
-		class: 'menu',
-		id: ''
-	}) }}
+	{% if entry.slug == 'homepage' %}
+		{{ craft.amNav.getNav('main', {
+			class: 'menu align-center',
+			id: ''
+		}) }}
+	{% else %}
+		{{ craft.amNav.getNav('main', {
+			class: 'menu',
+			id: ''
+		}) }}
+	{% endif %}
 </nav>
