--- a/craft/templates/partials/meta.twig
+++ b/craft/templates/partials/meta.twig
@@ -66,6 +66,7 @@
 <meta property="og:type" content="Website">
 {% for asset in entry.coverImage %}
 	<meta property="og:image" content="{{ siteUrl }}{{ asset.getUrl('metaImageFit') }}">
+	<meta property="og:image:alt" content="{% if title is defined %}{{ title }} - {% endif %}{{ siteName }}">
 	<meta property="og:image:width" content="{{ asset.getWidth('metaImageFit') }}">
 	<meta property="og:image:height" content="{{ asset.getHeight('metaImageFit') }}">
 	<meta property="og:image:type" content="{{ asset.getMimeType('metaImageFit') }}">
